# cortex-dispatcher

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Jenkinsfile  Makefile  README.md  cortex.yaml  docker-compose.yml  schema.sql
.github/workflows/: build.yml
core/: Cargo.toml
core/src/: lib.rs  sftp_connection.rs
db/: schema.sql  schema.yml
debian/: changelog  control
dev-stack/: README.rst  activate  cortex-dispatcher-push-metrics.yml  cortex-dispatcher.yml  cortex-dispatcher.yml.tmpl  cortex-sftp-scanner-push-metrics.yml  cortex-sftp-scanner.yml  definitions.json  prometheus.yml  requirements.txt
dev-stack/data-generator/: Dockerfile  data-generator
dev-stack/grafana/provisioning/dashboards/: cortex_dashboard.json
dev-stack/grafana/provisioning/datasources/: datasource.yml
dev-stack/pg_prometheus/docker-entrypoint-initdb.d/: 004-init-cortex-db.sh
dev-stack/rabbitmq/: Dockerfile
dispatcher/: Cargo.toml  schema.sql
dispatcher/debian/: control  rules
dispatcher/src/: amqp_consumer.rs  base_types.rs  cmd.rs  command_handler.rs  cortex.rs  directory_source.rs  directory_target.rs  dispatcher.rs  event.rs  http_server.rs  local_source.rs  local_storage.rs  main.rs  metrics.rs  metrics_collector.rs  persistence.rs  settings.rs  sftp_command_consumer.rs  sftp_downloader.rs  sftp_source.rs
dispatcher/static-web/: .env.development  index.html  package-lock.json  package.json  vue.config.js
dispatcher/static-web/src/: App.vue  main.js
dispatcher/static-web/src/components/: Connections.vue  Dashboard.vue  Sources.vue  Targets.vue
docs/: Makefile  conf.py  configuration.rst  index.rst  installation.rst
packaging/: dispatcher.dockerfile
sftp-scanner/: Cargo.toml  schema.sql
sftp-scanner/src/: amqp_sender.rs  cmd.rs  http_server.rs  main.rs  metrics.rs  settings.rs  sftp_connection.rs  sftp_scanner.rs
src/: amqp_consumer.rs  cmd.rs  command_handler.rs  cortex.rs  lib.rs  local_source.rs  main.rs  settings.rs  sftp_connection.rs  sftp_downloader.rs
