[package]
name = "cortex-dispatcher"
version = "0.2.3"
authors = ["Alfred Blokland <alfred.blokland@hendrikx-itc.nl>"]
edition = "2018"
description = """
Cortex is system for efficiently collecting and distributing files with a
choice of multiple protocols
"""
license = "GPL-3.0-or-later"
documentation = "https://cortex-dispatcher.readthedocs.io/en/latest/"
homepage = "https://github.com/hendrikx-itc/cortex-dispatcher"
repository = "https://github.com/hendrikx-itc/cortex-dispatcher"

[package.metadata.deb]
assets = [
    ["target/release/cortex-dispatcher", "/usr/bin/", "755"],
    ["static-web/*", "/usr/lib/cortex/static-web/", "644"]
]

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.8"

[dependencies]
log = "0.4"
env_logger = "0.8"
serde = "1.0"
serde_derive = "1.0"
config = "0.10"
regex = "1.4"
serde_regex = "1.1"
clap = "2"
ssh2 = "0.9"
futures = "0.3"
futures-util = { version = "0.3", features = ["compat"] }
lapin = "1.6"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-timer = "0.2"
failure = "0.1"
failure_derive = "0.1"
serde_json = "1.0"
serde_yaml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.9"
tee = "0.1"
prometheus = { version = "0.11" }
lazy_static = "1.4"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
tokio-postgres = "0.7"
cortex-core = { path = "../core" }
crossbeam-channel = "0.5"
actix-web = "3.3"
actix-files = "0.5"
actix-rt = "1.1"
actix-http = "2.2"
r2d2 = "0.8"
r2d2_postgres = "0.18"
bb8 = "0.7"
bb8-postgres = "0.7"
tera = "1.6"
signal-hook = { version = "0.3" }
signal-hook-tokio = { version = "0.2", features = ["support-v0_3"] }
retry = "1.2"
proctitle = "0.1"
error-chain = "0.12"
futures-retry = "0.5"
