[package]
name = "cortex-dispatcher"
version = "1.0.0-beta1"
authors = ["Alfred Blokland <alfred.blokland@hendrikx-itc.nl>"]
edition = "2018"
description = """
Cortex is system for efficiently collecting and distributing files with a
choice of multiple protocols
"""
license = "GPL-3.0-or-later"
documentation = "https://cortex-dispatcher.readthedocs.io/en/latest/"
homepage = "https://github.com/hendrikx-itc/cortex-dispatcher"
repository = "https://github.com/hendrikx-itc/cortex-dispatcher"

[package.metadata.deb]
assets = [
    ["target/release/cortex-dispatcher", "/usr/bin/", "755"],
]

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.8"

[dependencies]
log = "0.4"
env_logger = "0.9"
serde = "1.0"
serde_derive = "1.0"
config = "0.11"
regex = "1.3"
serde_regex = "1.1"
clap = "2"
async-io = "1.6"
async-ssh2-lite = "0.2"
futures = "0.3"
futures-io = "0.3"
futures-util = { path = "/home/alfred/tmp/futures-rs/futures-util", version = "0.4.0-alpha.0", features = ["compat", "io", "io-compat"] }
lapin = "1.2"
tokio = { version = "1.15", features = ["full"] }
tokio-timer = "0.2"
failure = "0.1"
failure_derive = "0.1"
serde_json = "1.0"
serde_yaml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tee = "0.1"
prometheus = { version = "0.13" }
lazy_static = "1.4"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
tokio-postgres = "0.7"
cortex-core = { path = "../core" }
crossbeam-channel = "0.5"
r2d2 = "0.8"
r2d2_postgres = "0.18"
bb8 = "0.7"
bb8-postgres = "0.7"
tera = "1.3"
signal-hook = { version = "0.3" }
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
retry = "1.0"
proctitle = "0.1"
error-chain = "0.12"
futures-retry = "0.6"
tokio-retry = "0.3"
