[package]
name = "cortex-dispatcher"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = """
Cortex is system for efficiently collecting and distributing files with a
choice of multiple protocols
"""
documentation = "https://cortex-dispatcher.readthedocs.io/en/latest/"
homepage = "https://github.com/hendrikx-itc/cortex-dispatcher"
repository = "https://github.com/hendrikx-itc/cortex-dispatcher"

[package.metadata.deb]
section = "misc"
assets = [
    ["target/release/cortex-dispatcher", "/usr/bin/", "755"],
]

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.8"

[dependencies]
log = "0.4"
env_logger = "0.10"
serde = "1.0"
serde_derive = "1.0"
config = "0.13"
regex = "1.6"
serde_regex = "1.1"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
ssh2 = "0.9"
futures = "0.3"
futures-util = { version = "0.3", features = ["compat"] }
deadpool-lapin = "0.10"
tokio = { version = "1.25", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tee = "0.1"
prometheus = { version = "0.13" }
lazy_static = "1.4"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
tokio-postgres = "0.7"
cortex-core = { path = "../core" }
crossbeam-channel = "0.5"
actix-web = "4.2"
actix-files = "0.6"
actix-http = "3.2"
r2d2 = "0.8"
r2d2_postgres = "0.18"
bb8 = "0.8"
bb8-postgres = "0.8"
tera = "1.17"
signal-hook = { version = "0.3" }
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
retry = "2.0"
proctitle = "0.1"
error-chain = "0.12"
futures-retry = "0.6"
stream-reconnect = { version = "0.3", default-features = false, features = ["tokio"] }
async-channel = "1.8"
