[package]
name = "cortex-sftp-scanner"
version = "0.1.23"
authors = ["Alfred Blokland <alfred.blokland@hendrikx-itc.nl>"]
edition = "2018"
description = "A service to scan for files on SFTP servers and enqueue jobs for the Cortex dispatcher."
license = "GPL-3.0-or-later"
documentation = "https://cortex-dispatcher.readthedocs.io/en/latest/"
homepage = "https://github.com/hendrikx-itc/cortex-dispatcher"
repository = "https://github.com/hendrikx-itc/cortex-dispatcher"

[dependencies]
clap = "2.33"
config = "0.9"
env_logger = "0.6.2"
failure = "0.1.5"
futures = "0.1"
lapin = "0.25.0"
lapin-futures = "0.25.0"
log = "0.4"
owning_ref = "0.4.0"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
serde_regex = "0.4.0"
ssh2 = "0.3.3"
tokio = "0.1.22"
tokio-executor = "0.1"
chrono = { version = "0.4", features = ["serde"] }
prometheus = { version = "0.7.0", features = ["push"] }
lazy_static = "1.3"
postgres = "0.15.2"
cortex-core = { path = "../core" }
actix-web = "1.0.5"
actix-rt = "0.2.4"
signal-hook = { version = "0.1.10", features = ["tokio-support"] }
retry = "0.5.1"
crossbeam-channel = "0.3"
proctitle = "0.1.1"
error-chain = "0.12.1"
