[package]
name = "cortex-sftp-scanner"
version = "0.2.0"
authors = ["Alfred Blokland <alfred.blokland@hendrikx-itc.nl>"]
edition = "2018"
description = "A service to scan for files on SFTP servers and enqueue jobs for the Cortex dispatcher."
license = "GPL-3.0-or-later"
documentation = "https://cortex-dispatcher.readthedocs.io/en/latest/"
homepage = "https://github.com/hendrikx-itc/cortex-dispatcher"
repository = "https://github.com/hendrikx-itc/cortex-dispatcher"

[dependencies]
clap = "2.33"
config = "0.10"
env_logger = "0.7"
failure = "0.1"
futures = "0.1"
lapin = "0.26"
lapin-futures = "0.26"
log = "0.4"
owning_ref = "0.4"
regex = "1.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
serde_regex = "0.4"
ssh2 = "0.7"
tokio = "0.1"
tokio-executor = "0.1"
chrono = { version = "0.4", features = ["serde"] }
prometheus = { version = "0.7", features = ["push"] }
lazy_static = "1.4"
postgres = { version = "0.17", features = ["with-chrono-0_4"] }
cortex-core = { path = "../core" }
actix-web = "1.0"
actix-rt = "0.2"
signal-hook = { version = "0.1", features = ["tokio-support"] }
retry = "1.0"
crossbeam-channel = "0.4"
proctitle = "0.1"
error-chain = "0.12"
