[package]
name = "cortex-sftp-scanner"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "A service to scan for files on SFTP servers and enqueue jobs for the Cortex dispatcher."
documentation = "https://cortex-dispatcher.readthedocs.io/en/latest/"
homepage = "https://github.com/hendrikx-itc/cortex-dispatcher"
repository = "https://github.com/hendrikx-itc/cortex-dispatcher"

[dependencies]
clap = { version = "4.1", features = ["cargo", "derive"] }
config = "0.14"
env_logger = "0.10"
anyhow = "1.0"
futures = "0.3"
futures-util = { version = "0.3", features = ["compat"] }
lapin = "2.1"
log = "0.4"
regex = "1.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
serde_regex = "1.1"
ssh2 = "0.9"
tokio = { version = "1.25", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
prometheus = { version = "0.13" }
lazy_static = "1.4"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
cortex-core = { path = "../core" }
actix-web = "4.2"
signal-hook = { version = "0.3" }
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
retry = "2.0"
crossbeam-channel = "0.5"
proctitle = "0.1"
error-chain = "0.12"

[package.metadata.deb]
section = "misc"
